<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>makerspet</name>
  <version>0.0.0</version>
  <description>ROS2 Python wrapper for Maker's Pet robots</description>

  <maintainer email="iliao@makerspet.com">Ilia O.</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://makerspet.com</url>
  <url type="repository">https://github.com/makerspet/makerspet</url>
  <url type="bugtracker">https://github.com/makerspet/makerspet/issues</url>
  <author email="iliao@makerspet.com">Ilia O.</author>

  <depend>rclpy</depend>
  <depend>kaiaai</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
